Improving the navigation + navigation on homepage.

--- a/src/main/demo-navigation.css
+++ b/src/main/demo-navigation.css
@@ -5,3 +5,8 @@
 	margin-right: -6px;
 	opacity: .25;	
 }
+
+/* Navigation on Homepage */
+#hpMainNavigation ol { counter-reset: item }
+#hpMainNavigation li { display: block }
+#hpMainNavigation li:before { content: counters(item, ".") " "; counter-increment: item }
