--- a/src/main/demo-navigation.css
+++ b/src/main/demo-navigation.css
@@ -11,9 +11,12 @@
 #hpMainNavigation li { display: block }
 #hpMainNavigation li:before { content: counters(item, ".") " "; counter-increment: item }
 
-/*left navigation*/
+/*Navigation on left*/
 #localNavigation{padding:0!important;}
-#localNavigation ul li.nav-header{text-align:center;font-size:16px;background-color:#ddd;padding:3px 0;}
+#localNavigation ul{padding-bottom:5px;}
+#localNavigation ul li.nav-header{text-align:center;font-size:16px;background-color:#ddd;padding:3px 0;margin-bottom:5px;}
+#localNavigation ul li a{color:#828282;padding:5px 15px;}
+#localNavigation ul li.active a{color:#444;}
 
 /*top navigation*/
 .navbar-nav button{color:white;}
@@ -24,16 +27,24 @@
 #persooDemoNavigation .navbar{margin-bottom:0;}
 #persooDemoNavigation .navbar .navbar-collapse .navbar-nav{float:right;margin-right:-15px;}
 #persooDemoNavigation .navbar .navbar-collapse .navbar-nav .navbar-form{padding:0;}
+#persooDemoNavigation .navbar-header{padding:5px 0;}
+#persooDemoNavigation .navbar-brand{padding:0px 15px;height:40px;line-height:40px;}
 
 #persooDemoNavigation2 .navbar{border:0;}
 #persooDemoNavigation2 .navbar-collapse{text-align:center;}
 #persooDemoNavigation2 .navbar-collapse ul.navbar-nav{width:100%;margin:0 -15px;display:inline-block;float:none;}
-#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(1){display:inline-block;float:left;}
-#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(2){display:inline-block;float:none;width:auto;}
-#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(3){display:inline-block;float:right;}
+#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li{top:0;}
+#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(1){position:absolute;left:0;display:inline-block;}
+#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(2){position:absolute;width:120px;margin-left:-60px;display:inline-block;}
+#persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(3){position:absolute;right:0;display:inline-block;}
+
 
 /*category tree*/
 #category-tree ul {float:left;width:202px;padding:0;list-style-type:none;}
 #category-tree ul li{padding:2px 3px;}
 #category-tree ul li:nth-child(odd){background-color:#f5f5f5;}
 #category-tree ul li:nth-child(even){background-color:#eee;}
+
+.productCard .button.buy{text-align:center;width:100%;margin-top:5px;}
+.productCard .button.buy a{display:block;width:100%;color:white;font-weight:bold;text-transform:uppercase;text-decoration:none;}
+.productCard .button.buy:hover{background-color:blue;}
