--- a/src/main/demo-navigation.css
+++ b/src/main/demo-navigation.css
@@ -17,8 +17,8 @@
 #hpMainNavigation p i{background-color:#f5f5f5;padding:3px 5px;border-radius:5px;border:1px solid #e8e8e8;}
 
 /*Navigation on left*/
-#localNavigation{padding:0!important;}
-#localNavigation ul{padding-bottom:5px;}
+#localNavigation{padding:0!important;margin-top: 20px;}
+#localNavigation ul{padding-bottom:5px;margin:0;}
 #localNavigation ul li.nav-header{text-align:center;font-size:16px;background-color:#ddd;padding:3px 0;margin-bottom:5px;}
 #localNavigation ul li a{color:#828282;padding:5px 15px;}
 #localNavigation ul li.active a{color:#444;}
@@ -28,12 +28,12 @@
 .navbar-nav button:nth-of-type(1){background-color:#BD1E51;}
 .navbar-nav button:nth-of-type(2){background-color:#F8CA10;}
 
-
 #persooDemoNavigation .navbar{margin-bottom:0;}
 #persooDemoNavigation .navbar .navbar-collapse .navbar-nav{float:right;margin-right:-15px;}
 #persooDemoNavigation .navbar .navbar-collapse .navbar-nav .navbar-form{padding:0;}
 #persooDemoNavigation .navbar-header{padding:5px 0;}
 #persooDemoNavigation .navbar-brand{padding:0px 15px;height:40px;line-height:40px;}
+#persooDemoNavigation.fixed{margin-bottom:70px;}
 
 #persooDemoNavigation2 .navbar{border:0;}
 #persooDemoNavigation2 .navbar-collapse{text-align:center;}
@@ -42,3 +42,5 @@
 #persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(1){position:absolute;left:0;display:inline-block;}
 #persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(2){position:absolute;width:120px;margin-left:-60px;display:inline-block;}
 #persooDemoNavigation2 .navbar-collapse ul.navbar-nav li:nth-of-type(3){position:absolute;right:0;display:inline-block;}
+#persooDemoNavigation2.fixed{position:fixed;top:0;width: 100%;z-index: 1000;}
+#persooDemoNavigation2.fixed .navbar{border-bottom:1px solid #e7e7e7;}
