--- a/src/main/frytol.css
+++ b/src/main/frytol.css
@@ -11,6 +11,8 @@ Border (GRAY)
 #e8e8e8 - menu with Page on HP
 */
 
+.row-fluid>.content{padding-left:40px;}
+
 
 /*category tree*/
 #category-tree ul {float:left;width:202px;padding:0;list-style-type:none;}
@@ -18,10 +20,10 @@ Border (GRAY)
 #category-tree ul li:nth-child(odd){background-color:#f5f5f5;}
 #category-tree ul li:nth-child(even){background-color:#eee;}
 
-/*productCards - Category*/
-.productCard .button.buy{text-align:center;width:100%;margin-top:5px;}
-.productCard .button.buy a{display:block;width:100%;color:white;font-weight:bold;text-transform:uppercase;text-decoration:none;}
-.productCard .button.buy:hover{background-color:blue;}
+/*productCards - Category and detail*/
+.button.buy{text-align:center;width:100%;margin-top:5px;}
+.button.buy a{display:block;width:100%;color:white;font-weight:bold;text-transform:uppercase;text-decoration:none;}
+.button.buy:hover{background-color:blue;}
 
 /*instructions*/
 .instructions{margin:20px 0 40px;}
@@ -40,11 +42,21 @@ Border (GRAY)
 .script h2{background-color:#D8D8D8;color:#FF4040;margin:0;padding:10px;}
 .script pre{border-radius:0;margin:0;border:1px solid #e3e3e3;background-color: #EDEDED;}
 
+/*basket debug*/
+.boxDebug{display: inline-block;width:100%;padding-left:0;margin:20px 0 40px;}
+.boxDebug h2{background-color:#D8D8D8;color:#00CDAC;margin:0;padding:10px;}
+.boxDebug h2 .buttons{float:right;margin:0 -4px 0 0;}
+.boxDebug h2 .buttons span{background-color:#00CDAC;color:white;padding:4px 7px;margin:0 4px;cursor: pointer; text-decoration: none;font-size: 0.9em;}
+.boxDebug h2 .buttons span:hover{background-color:#88D3AB;}
+.boxDebug .editor{padding:8px;border-radius:0;margin:0;border:1px solid #e3e3e3;background-color: #EDEDED;word-break: break-word;}
+
 /*text*/
+h1{color:#556270;padding-bottom:5px;border-bottom:3px solid #556270;}
 h2.subtitle{
 		display: table;
 		background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
+		color:#676767;
     padding: 10px 20px;
     border-radius: 0 20px 20px;
     font-size: 1.6em;
