--- a/src/main/demo-navigation.css
+++ b/src/main/demo-navigation.css
@@ -14,7 +14,6 @@
 #hpMainNavigation li:before {font-size: 1.6em; min-width: 30px; padding-right: 15px; float: left; content: counters(item, ".") " "; counter-increment: item }
 #hpMainNavigation li a{font-size: 1.4em;}
 #hpMainNavigation p{margin:0 0 10px;}
-#hpMainNavigation p i{background-color:#f5f5f5;padding:3px 5px;border-radius:5px;border:1px solid #e8e8e8;}
 
 /* Navigation on left */
 #localNavigation{padding:0!important;margin-top: 20px;}
@@ -58,7 +57,12 @@ footer span{color: #777;}
 /* preview box */
 .preview { width:100%;padding-left:0;margin:20px 0 40px;}
 .preview.zero { margin:0;}
-.preview h2 { background-color:#D8D8D8;color: #BD1E51;margin:0;padding:10px;}
+.preview h2 {
+    background-color:#D8D8D8;
+    color: #BD1E51;
+    margin:0 0 0.5ex 0;
+    padding:10px;
+}
 .preview pre { border-radius:0; margin:0; border:1px solid #e3e3e3; background-color: #EDEDED;}
 
 /* instructions box */
@@ -69,7 +73,8 @@ footer span{color: #777;}
 .instructions > h2{
     background-color:#D8D8D8;
     color:#4E9CB5;
-    margin:0;padding:10px;
+    margin:0 0 0.5x 0;
+    padding:10px;
 }
 .instructions ol {
 	counter-reset:li;
@@ -105,6 +110,9 @@ footer span{color: #777;}
 	font-weight:bold;
 	font-family:"Helvetica Neue", Arial, sans-serif;
 	text-align:center;
+}
+.instructions ol ol > li:before {
+	background: #d8d8d8;
 }
 .instructions li ol,
 .instructions li ul {margin-top:6px;}
